--- a/package.json
+++ b/package.json
@@ -1,34 +1,39 @@
 {
     "name": "my-bootstrap",
     "version": "1.0.0",
-    "description": "A custom UI Framework & Developer Environment",
-    "main": "cli/index.js",
+    "private": true,
+    "type": "module",
+    "description": "MyBootstrap - Custom UI Framework & Docs Platform",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "vite",
-        "build": "vite build",
-        "preview": "vite preview"
+        "dev": "npx vite",
+        "build": "npx vite build",
+        "preview": "npx vite preview"
     },
     "keywords": [
         "ui",
         "framework",
         "bootstrap",
-        "compiler"
+        "docs",
+        "vite",
+        "react"
     ],
-    "author": "Ravinder",
+    "author": "Ravinder Yadav",
     "license": "ISC",
+    "engines": {
+        "node": ">=18"
+    },
     "dependencies": {
-        "@tailwindcss/postcss": "^4.1.18",
-        "@vitejs/plugin-react": "^5.1.2",
-        "lucide-react": "^0.562.0",
-        "react": "^19.2.3",
-        "react-dom": "^19.2.3",
-        "react-router-dom": "^7.11.0"
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-router-dom": "^6.26.2",
+        "lucide-react": "^0.562.0"
     },
     "devDependencies": {
-        "autoprefixer": "^10.4.23",
-        "postcss": "^8.5.6",
-        "tailwindcss": "^4.1.18",
-        "vite": "^7.3.0"
+        "vite": "^5.4.8",
+        "@vitejs/plugin-react": "^4.3.2",
+        "tailwindcss": "^3.4.14",
+        "postcss": "^8.4.47",
+        "autoprefixer": "^10.4.20"
     }
 }
